Updated contact and credit page

--- a/html/credit.html
+++ b/html/credit.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Credits</title>
 
 </head>
 <body>
-<p>
-    <strong>Illustration and avatars used in this portfolio are copyright free and were downloaded from:<br/></strong>
-    <ul>
-    <li><a href="https://undraw.co/search">undraw</a><br/></li>
-    <li><a href='https://www.freepik.com/vectors/'>freepik</a></li>
-    </ul>
-</p>
+    <p>
+        <strong>Illustrations and avatars used in this portfolio are copyright free and were downloaded from:<br/></strong>
+        <ul>
+            <li><a href="https://undraw.co/search">undraw</a><br/></li>
+            <li><a href='https://www.freepik.com/vectors/'>freepik</a></li>
+            <li><a href="https://giphy.com/gifs/Pluralsight-computer-technology-coding-L1R1tvI9svkIWwpVYr">via GIPHY</a></li>
+        </ul>
+    </p>
 
 </body>
 </html>
