--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
                     <li><a href="#about-me">About</a></li>
                     <li><a href="#projects">Portfolio</a></li>
                     <li><a href="#contacts">Contact</a></li>
-                    <li><a href="/html/Other.html" target="_blank">Other</a></li>
+                    <!--<li><a href="/html/Other.html" target="_blank">Other</a></li>-->
                 </ul>
         </nav>
     </header>
@@ -59,8 +59,8 @@
                             result <br/>oriented lady, I always work towards<br/>
                             achieving best result on each project <br/>I lay my hands on.</i>
                         <p></p>
-                        <button class="see-more" onclick="open()">Open my resume
-                            <i class="fa fa-envelope-open-o"></i>
+                        <button class="see-more"><a href="/doc/resume.pdf" target="_blank">Open my resume
+                            <i class="fa fa-envelope-open-o"></i></a>
                         </button>
                     </td>
                 </tr>
@@ -104,7 +104,7 @@
 
             <!-- 4. Contacts -->
     <div id="contacts">
-        <strong>Contacts</strong>
+        <strong>Get in touch...</strong>
         <div class="contact flex-container">
             <div class="address display__column">
                 <div class="street">
@@ -132,7 +132,10 @@
                     </ul>
                 </div>
             </div>
-            <div class="message">
+            <div class="contact-us">
+                <img src="/img/contact.svg" alt="contact-us">
+            </div>
+           <!-- <div class="message">
                 <form class="flex-container display__column">
                     <div>
                         <label>
@@ -153,7 +156,8 @@
                     </div>
                     <div><input type="submit" class="submit" value="Submit" onclick="submit()"></div>
                 </form>
-            </div></div>
+            </div>-->
+            </div>
     </div>
 
     <!-- Footer -->
