fix overflow,added responsive design

--- a/html/index.html
+++ b/html/index.html
@@ -1,201 +1,227 @@
 <!DOCTYPE html>
 <html lang="en-US" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="keywords" content="HTML, CSS, JavaScript">
-        <meta name="author" content="Brunnotte Wasaulua ">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Brunnotte | Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-        <link rel="stylesheet" href="/css/index.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="/js/index.js" type="text/javascript"></script>
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Brunnotte Wasaulua ">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Brunnotte | Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="/js/index.js" type="text/javascript"></script>
+</head>
+<body>
 
-    <!--  header -->
-    <header>
-        <nav id="nav" class=" nav nav-container">
-            <img src="/img/logo.png" alt="logo" class="logo">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about-me">About</a></li>
-                    <li><a href="#projects">Portfolio</a></li>
-                    <li><a href="#contacts">Contact</a></li>
-                </ul>
-        </nav>
-    </header>
+<!--  header -->
+<header>
+    <nav id="navbar" class=" nav-container">
+        <img src="/img/logo.png" alt="logo" class="logo">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about-me">About</a></li>
+            <li><a href="#projects">Portfolio</a></li>
+            <li><a href="#contacts">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
-    <!-- Main menu -->
-    <!-- 1. Home -->
-    <div id="home" class="header flex-container ">
-        <div class="myName">
-            <p>Hello... &nbsp;I'm<br/>
-                <strong class="animated">Brunnotte<br/>Wasaulua</strong><br/></p>
+<!-- Main menu -->
+<!-- 1. Home -->
+<div id="home" class="header flex-container ">
+    <div class="myName">
+        <p>Hello... &nbsp;I'm<br/>
+            <strong class="animated">Brunnotte<br/>Wasaulua</strong><br/></p>
+        <p></p>
+        <button class="see-more">
+            <a href="#about-me" style="vertical-align:middle; color: white"><span>Learn more...</span></a>
+        </button>
+    </div>
+    <div class="frontend-img">
+        <img src="/img/front.svg" alt="js-htm-css-illustration">
+    </div>
+</div>
+
+<!-- 2. About me -->
+<div id="about-me" class="about-me">
+    <div class="flex-container">
+        <div class="icons">
+            <img src="/img/avatar2.jpg" alt="avatar" class="icon-avatar ">
+        </div>
+
+        <div class="about-me__text">
+            <p></p>I'm a junior front-end developer.<br/>
+            I know how to use various technologies,<br/>
+            frameworks and programming languages<br/>
+            specifically according to the task<br/>
+            given to me.
             <p></p>
-            <button>
-                <a href="#about-me" style="vertical-align:middle; color: white"><span>Learn more...</span></a>
-            </button>
-        </div>
-        <div class="frontend-img">
-            <img src="/img/front.svg" alt="js-htm-css-illustration">
-        </div>
-    </div>
-
-    <!-- 2. About me -->
-    <div id="about-me" class="about-me">
-        <div class="flex-container">
-            <div class="icons">
-                <img src="/img/avatar2.jpg" alt="avatar" class="icon-avatar ">
-            </div>
-
-            <div class="about-me__text">
-                <i><p></p>I'm a junior front-end developer.<br/>
-                I know how to use various technologies,<br/>
-                frameworks and programming languages<br/>
-                specifically according to the task given to me.
-                <p></p>
-                Being a diligent, hardworking and
-                result <br/>oriented lady, I always work towards<br/>
-                achieving best result on each project <br/>I lay my hands on.</i><br/>
-                <p>
-                    <a href="/doc/resume.pdf" target="_blank">Open my resume
-                        <i class="fa fa-envelope-open-o"></i>
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <!-- 4. Projects -->
-    <div id="projects" class=" display__column">
-        <div class="project-table">
-        <table>
-            <caption><strong>My projects</strong></caption>
-            <tr>
-                <th>Novo</th>
-                <th>Butterfly</th>
-                <th>ziBraids</th>
-            </tr>
-            <tr>
-                <td>
-                    <p><i>Single page</i></p>
-                    Computer reparation website
-                </td>
-                <td>
-                    <p><i>Blog</i></p>
-                    Personal development blog
-                </td>
-                <td>
-                    <p><i>Single page</i></p>
-                    Website for advertisements
-                </td>
-            </tr>
-        </table>
-        </div>
-        <div class="see-more">
-            <button>
-                <a href="/html/projects.html" target="_blank" style="vertical-align:middle; color: white">
-                    <span>Learn more...</span>
+            Being a diligent, hardworking and result<br/>
+            oriented lady, I always work towards<br/>
+            achieving best result on each project <br/>
+            I lay my hands on.<br/>
+            <p>
+                <a href="https://brunewas001.wixsite.com/resume-brunnotte" target="_blank">Open my resume
+                    <i class="fa fa-envelope-open-o"></i>
                 </a>
-            </button>
+            </p>
         </div>
     </div>
+</div>
 
-            <!-- 4. Contacts -->
-    <div id="contacts">
-        <div class="contact flex-container">
-            <div class="address display__column">
-                <div class="street">
-                    <strong>Get in touch...</strong>
-                    <ul>
-                        <li><i class="fa fa-solid fa-map-marker"></i> Petrogradskiy district,<br/>
-                            Saint-Petersburg, Russia.<br/>
-                        </li>
-                        <li>
-                            <i class="fa fa-solid fa-phone"></i> +79117771408
-                        </li>
-                        <li>
-                            <i class="fa fa-solid fa-envelope"></i>
-                            <ul>
-                                <li>
-                                    <a href="mailto:bt.wasaulua@gmail.com">bt.wasaulua@gmail.com</a><br/>
+<!-- 3. Projects -->
+<div id="projects">
+    <div class="project-table">
+        <div class="title"><strong>My projects</strong></div>
+        <section class="wrapper">
+            <ul class="column__list">
+                <li class="column__item">
+                    <div class="column__title--wrapper">
+                        <h2>In progress</h2>
+                        <i class="fas fa-ellipsis-h"></i>
+                    </div>
+                    <ul class="card__list">
+                        <li class="card__item">
+                            <span class="card__tag card__tag--high">PHP</span>
+                            <h4 class="card__title">Kart'Own</h4>
+                            <ul class="card__actions">
+                                <li class="card__actions--wrapper">
+                                        <span class="card__actions--text">
+                                            Web site for a cardboard technology start-up
+                                        </span>
                                 </li>
-                                <li>
-                                    <a href="mailto:bt.wasaulua@yandex.ru">bt.wasaulua@yandex.ru</a><br/>
+                            </ul>
+                        </li>
+                        <li class="card__item">
+                            <span class="card__tag card__tag--high">Angular</span>
+                            <h4 class="card__title">Novo</h4>
+                            <ul class="card__actions">
+                                <li class="card__actions--wrapper">
+                                    <span class="card__actions--text">Static website for computer-technical company</span></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <div class="column__item--cta">
+                        <!--<h5>Others...</h5>-->
+                    </div>
+                </li>
+                <li class="column__item">
+                    <div class="column__title--wrapper">
+                        <h2>Finished</h2>
+                        <i class="fas fa-ellipsis-h"></i>
+                    </div>
+                    <ul class="card__list">
+                        <li class="card__item">
+                            <span class="card__tag card__tag--high">VueJs 3</span>
+                            <h4 class="card__title">Butterfly</h4>
+                            <ul class="card__actions">
+                                <li class="card__actions--wrapper">
+                                        <span class="card__actions--text">
+                                            A blog for personal development<br/>
+                                         </span>
                                 </li>
-                                <li>
-                                    <a href="mailto:268919@niuitmo.ru">268919@niuitmo.ru</a>
+                            </ul>
+                        </li>
+                        <li class="card__item">
+                            <span class="card__tag card__tag--high">ReactJs</span>
+                            <h4 class="card__title">ziBraids</h4>
+                            <ul class="card__actions">
+                                <li class="card__actions--wrapper">
+                                        <span class="card__actions--text">
+                                            Ads webpage for a shop start-up
+                                         </span>
                                 </li>
                             </ul>
                         </li>
                     </ul>
-                </div>
-            </div>
-            <div class="contact-us">
-                <img src="/img/contact.svg" alt="contact-us">
-            </div>
-           <!-- <div class="message">
-                <form class="flex-container display__column">
-                    <div>
-                        <label>
-                            <input type="text" placeholder="Full name" required>
-                        </label>
+                    <div class="column__item--cta">
+                        <!--<h5>Others...</h5>-->
                     </div>
-                    <div>
-                        <label>
-                            <input type="email" placeholder="Email">
-                        </label>
-                        <label>
-                            <input type="tel" placeholder="Phone number">
-                        </label></div>
-                    <div>
-                        <label>
-                            <textarea>Enter your message...</textarea>
-                        </label>
-                    </div>
-                    <div><input type="submit" class="submit" value="Submit" onclick="submit()"></div>
-                </form>
-            </div>-->
-            </div>
+                </li>
+            </ul>
+        </section>
     </div>
-
-
-    <!-- Footer -->
-    <div id="footer" class="flex-container">
-        <div class="copy">
-            2022 &copy; All right reserved.<br/>
-            <!-- modal -->
-            <button id="btn-modal" onclick="open_modal()">
-                Accreditations
-            </button>
-        </div>
-        <div class="from">From <span class="heart">&#10084;</span><br/>by Brunnotte</div>
-        <div class="social-media">
-            <a href="https://t.me/Sabahoth" class="fa fa-telegram"></a>
-            <a href="#" class="fa fa-whatsapp"></a>
-            <a href="https://github.com/sabahoth01" class="fa fa-github"></a>
-        </div>
+    <div class="see-more">
+        <button>
+            <a href="https://brunotte-p.tilda.ws/" target="_blank" style="vertical-align:middle; color: white">
+                <span>Learn more...</span>
+            </a>
+        </button>
     </div>
-
-    <div id="myModal" class="modal">
-
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <!-- Modal header -->
-            <strong class="modal-header">Accreditations</strong><br/>
-            <div>
-                <strong>
-                    <br/>Illustrations and avatars used in this portfolio are copyright free and were downloaded from:
-                </strong>
+</div>
+<!-- 4. Contacts -->
+<div id="contacts">
+    <div class="contact flex-container">
+        <div class="address display__column">
+            <div class="street">
+                <strong>Get in touch...</strong>
                 <ul>
-                    <li><a href="https://undraw.co/search">undraw</a><br/></li>
-                    <li><a href='https://www.freepik.com/vectors/'>freepik</a></li>
-                    <li><a href="https://giphy.com/gifs/Pluralsight-computer-technology-coding-L1R1tvI9svkIWwpVYr">via GIPHY</a></li>
+                    <li><i class="fa fa-solid fa-map-marker"></i> Petrogradskiy district,<br/>
+                        Saint-Petersburg, Russia.<br/>
+                    </li>
+                    <li>
+                        <i class="fa fa-solid fa-phone"></i> +79117771408
+                    </li>
+                    <li>
+                        <i class="fa fa-solid fa-envelope"></i>
+                        <ul>
+                            <li>
+                                <a href="mailto:bt.wasaulua@gmail.com">bt.wasaulua@gmail.com</a><br/>
+                            </li>
+                            <li>
+                                <a href="mailto:bt.wasaulua@yandex.ru">brunewas001@gmail.com</a><br/>
+                            </li>
+                            <li>
+                                <a href="mailto:268919@niuitmo.ru">268919@niuitmo.ru</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
+        <div class="contact-us">
+            <img src="/img/contact.svg" alt="contact-us">
+        </div>
     </div>
-    </body>
+</div>
+
+
+<!-- Footer -->
+<div id="footer" class="flex-container .display__row">
+    <div class="copy">
+        2022 &copy; All right reserved.<br/>
+        <!-- modal -->
+        <button id="btn-modal" onclick="open_modal()">
+            Accreditations
+        </button>
+    </div>
+    <div class="from">From <span class="heart">&#10084;</span><br/>by Brunnotte</div>
+    <div class="social-media">
+        <a href="https://t.me/Sabahoth" class="fa fa-telegram"></a>
+        <a href="#" class="fa fa-whatsapp"></a>
+        <a href="https://github.com/sabahoth01" class="fa fa-github"></a>
+    </div>
+</div>
+
+<div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <!-- Modal header -->
+        <strong class="modal-header">Accreditations</strong><br/>
+        <div>
+            <strong>
+                <br/>Illustrations and avatars used in this portfolio are copyright free and were downloaded from:
+            </strong>
+            <ul>
+                <li><a href="https://undraw.co/search">undraw</a><br/></li>
+                <li><a href='https://www.freepik.com/vectors/'>freepik</a></li>
+                <li><a href="https://giphy.com/gifs/Pluralsight-computer-technology-coding-L1R1tvI9svkIWwpVYr">via GIPHY</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+</body>
 </html>
