--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="about-me__text">
-            <p></p>I'm a junior front-end developer.<br/>
+            <p></p>I'm a student in software engineering.<br/>
             I know how to use various technologies,<br/>
             frameworks and programming languages<br/>
             specifically according to the task<br/>
